Lab2/yamls/agic/agic-ingress-store-front.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-store-front
  namespace: prod
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: store-front
            port:
              number: 80
